[tool.poetry]
name = "corona"
version = "0.1.0"
description = ""
authors = ["Luke Marshall <lukasmarshall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.9.1"
plotly = "^4.5.4"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
